--- a/my-app/package.json
+++ b/my-app/package.json
@@ -1,25 +1,19 @@
 {
-  "name": "frontend",
+  "name": "my-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@mantine/core": "^3.6.9",
-    "@mantine/dates": "^3.6.9",
-    "@mantine/dropzone": "^3.6.9",
-    "@mantine/hooks": "^3.6.9",
-    "@mantine/modals": "^3.6.9",
-    "@mantine/notifications": "^3.6.9",
-    "@mantine/prism": "^3.6.9",
-    "@mantine/rte": "^3.6.9",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
-    "dayjs": "^1.10.7",
-    "flexbox-react": "^4.4.0",
+    "@types/jest": "^27.4.0",
+    "@types/node": "^16.11.25",
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.11",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
