--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "dependencies": {
     "@mantine/core": "^3.6.9",
-    "@mantine/dropzone": "^3.6.12",
+    "@mantine/dropzone": "^3.6.13",
     "@mantine/hooks": "^3.6.9",
+    "@radix-ui/react-icons": "^1.1.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
